fix width on mobile

--- a/components/Note/styles.module.scss
+++ b/components/Note/styles.module.scss
@@ -75,7 +75,7 @@
   @media (max-width: 768px) {
     margin: 0;
     padding: 1rem;
-    width: 100%;
+    width: 45%;
     max-width: unset;
 
     .title {
